# royale_rpm

./: .env  .env.example  .gitignore  docker-compose.yml  pgadmin-servers.json
.github/workflows/: ci.yml
deck_collector/: .env.example  .gitignore  Dockerfile  alembic.ini  requirements.txt
deck_collector/alembic/: env.py
django_project/: .gitignore  Dockerfile  README.md  architecture.drawio  page.html  pyproject.toml  requirements.txt
django_project/legacy_scripts/: clash_royale.py  deck_recommendation.py  deck_signature.py  import_royaleapi_decks.py  import_statsroyale_decks.py  repopulate_db.py
django_project/royale_helper/: manage.py  royaleapi_page.html
django_project/royale_helper/app/: admin.py  models.py  tests.py  views.py
django_project/royale_helper/app/management/commands/: import_cards.py
django_project/royale_helper/app/migrations/: 0001_initial.py  0002_remove_deck_name_alter_card_api_id_and_more.py
django_project/royale_helper/app/services/: __init__.py  api_client.py
django_project/royale_helper/app/static/app/css/: style.css
django_project/royale_helper/app/templates/app/: base.html  decks.html  index.html  recommend.html  zodiac.html
django_project/royale_helper/player_profiles/: player_2YG80UJJ2.json  player_Y9PYUUY88.json
django_project/royale_helper/royale_helper/: asgi.py  settings.py  urls.py  wsgi.py
notification_service/: consumer.py
player_service/: requirements.txt
recommendation_service/: Dockerfile  pyproject.toml  requirements-dev.txt  requirements.txt
zodiac_service/: Dockerfile  go.mod  main.go
(+25 files in other folders)
